--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 			</p>
 			<img src="images/waterpark.jpg" alt="slides at a waterpark" width="500">
 		<h2 id="interest">My Interests</h2>
-			<p>Have many interests like tv shows, Netflix, Youtube, food.</p>
+			<p>Have many interests like tv shows, Netflix, Youtube, food. Those are my main interest but I have more.</p>
 			<img src="images/giraffe.jpg" alt="back of the head of a giraffe" width="500">
 		<h2 id="family">Family</h2>
 		<ul>
