--- a/index.html
+++ b/index.html
@@ -20,7 +20,10 @@
 			<p>I don't have many skills but some I have are, ATM topics, hula hooping and volleyball. I think that I am pretty good at hula hooping because I can do tricks with a hula hoop. </p>
 			<img src="images/museum.jpg" alt="people looking at art" width="500">
 		<h2 id="hobbies">My Hobbies</h2>
-			<p>I have a few hobbies like watching Youtube, watching Netflix, eating, sleeping and drawing. My favorite hobbie is watchng Youtube while snacking. During my free time I usually watch Youtube or Netflix. 
+			<p>I have a few hobbies like watching Youtube, watching Netflix, eating, sleeping and drawing. 
+				My favorite hobbie is watchng Youtube while snacking. 
+				During my free time I usually watch Youtube or Netflix. 
+				I think that these are 
 			</p>
 			<img src="images/waterpark.jpg" alt="slides at a waterpark" width="500">
 		<h2 id="interest">My Interests</h2>
