--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 			<p>I have a few hobbies like watching Youtube, watching Netflix, eating, sleeping and drawing. 
 				My favorite hobbie is watchng Youtube while snacking. 
 				During my free time I usually watch Youtube or Netflix. 
-				I think that these are 
+				I think that these are my favorite hobbies because I enjoy watching shows, movies, and videos.
 			</p>
 			<img src="images/waterpark.jpg" alt="slides at a waterpark" width="500">
 		<h2 id="interest">My Interests</h2>
