--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 			<h1 id="marikris">About Marikris</h1>
 			<h2 id="contents">Table of Contents</h2>
 				<ul>
-					<li><a target="_blank" href="index.html">Home</a></li>
-					<li><a target="_blank" href="future.html">My Future</a></li>
-					<li><a target="_blank" href="atm.html">ATM</a></li>
-					<li><a target="_blank" href="entertainment.html">Entertainment</a></li>
+					<li><a  href="index.html">Home</a></li>
+					<li><a  href="future.html">My Future</a></li>
+					<li><a  href="atm.html">ATM</a></li>
+					<li><a  href="entertainment.html">Entertainment</a></li>
 				</ul>
 		</header>
 		<h2 id="skills">My Skills</h2>
