--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 			<img src="Image Source">
 			<h1 id="marikris">About Marikris</h1>
 			<h2 id="contents">Table of Contents</h2>
-				<ul>
+				<ul id="links">
 					<li><a href="index.html">Home</a></li>
 					<li><a href="future.html">My Future</a></li>
 					<li><a href="atm.html">ATM</a></li>
@@ -27,7 +27,10 @@
 			</p>
 			<img src="images/waterpark.jpg" alt="slides at a waterpark" width="500">
 		<h2 id="interest">My Interests</h2>
-			<p>Have many interests like tv shows, Netflix, Youtube, food. Those are my main interest but I have more.</p>
+			<p>Have many interests like tv shows, Netflix, Youtube, food.
+				Those are my main interest but I have many more that I am not that interested in as I am to my main ones.
+				I think that I 
+		</p>
 			<img src="images/giraffe.jpg" alt="back of the head of a giraffe" width="500">
 		<h2 id="family">Family</h2>
 		<ul>
@@ -41,7 +44,7 @@
 			<li>Cadence
 			<li>Calista
 		</ul>
-	
+		
 	</body>
 </html>
 
