--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 		</p>
 			<img src="images/giraffe.jpg" alt="back of the head of a giraffe" width="500">
 		<h2 id="family">Family</h2>
-		<ul>
+		<ul id="family">
 			<li>Cheril
 			<li>Rowen
 			<li>Gayzel
