--- a/index.html
+++ b/index.html
@@ -33,17 +33,17 @@
 		</p>
 			<img src="images/giraffe.jpg" alt="back of the head of a giraffe" width="500">
 		<h2 id="family">Family</h2>
-		<ul id="family">
-			<li>Cheril
-			<li>Rowen
-			<li>Gayzel
-			<li>Ronnel
-			<li>Bryan
-			<li>Karen
-			<li>Kevin
-			<li>Cadence
-			<li>Calista
-		</ul>
+		<p>
+			Cheril<br>
+			Rowen<br>
+			Gayzel<br>
+			Ronnel<br>
+			Bryan<br>
+			Karen<br>
+			Kevin<br>
+			Cadence<br>
+			Calista<br>
+		</p>
 		
 	</body>
 </html>
