--- a/index.html
+++ b/index.html
@@ -34,7 +34,15 @@
 			<img src="images/giraffe.jpg" alt="back of the head of a giraffe" width="500">
 		<h2 id="family">Family</h2>
 		<p>
-		Cheril, Rowen, Gayzel, Ronnel, Bryam, Karen, Kevin, Cadence, Calista
+		Cheril<br>
+		Rowen<br>
+		Gayzel<br>
+		Ronnel<br>
+		Bryan<br>
+		Karen<br>
+		Kevin<br>
+		Cadence<br>
+		Calista<br>	
 		</p>
 		
 	</body>
