--- a/atm.html
+++ b/atm.html
@@ -17,8 +17,11 @@
 				</ul>
 		</header>
 		
-		
-		
+		<h2>6th Grade Learning</h2>
+		<p> We learned how to type, use Microsoft Word, Exel, Slideshow, research, and Javascript.
+			We learned about basic technology and nothing hard. 
+			Most of us were new to technology so we started with the basics and started slow. 
+		</p>
 		
 		
 		
