--- a/future.html
+++ b/future.html
@@ -6,6 +6,7 @@
 	</head>
 	<body>
 		<header>
+			<title>My Future</title>
 			<img src="Image Source">
 			<h1>About Marikris</h1>
 			<h2>Table of Contents</h2>
@@ -17,6 +18,13 @@
 				</ul>
 		</header>
 		
+		<h2>High School</h2>
+		
+		<h2>College</h2>
+		
+		<h2>Career Interest</h2>
+		
+		<h2>Goals</h2>
 		
 		
 		
