--- a/atm.html
+++ b/atm.html
@@ -23,8 +23,15 @@
 			Most of us were new to technology so we started with the basics and started slow. 
 		</p>
 		
+		<h2>7th Grade Learning</h2>
+		<p> In 7th grade we started to learn more about technology and it wasn't very easy stopics.
+			We learned how to use Photoshop, Illustrator, SketchUp, and FloorPlanner.
+		</p>
 		
 		
+		<h2>8th Grade Learning</h2>
+		<p>
+		</p>
 		
 		
 		
