--- a/atm.html
+++ b/atm.html
@@ -30,7 +30,7 @@
 		
 		
 		<h2>8th Grade Learning</h2>
-		<p>
+		<p> In 8th grade we learned how to code, filming, use storyboard, Imovie, and GarageBand.
 		</p>
 		
 		
