--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 		<header>
 			<img src="Image Source">
 			<h1 id="marikris">About Marikris</h1>
+			<img src="Image Source">
 			<h2 id="contents">Table of Contents</h2>
 				<ul id="links">
 					<li><a href="index.html">Home</a></li>
