--- a/atm.html
+++ b/atm.html
@@ -22,17 +22,17 @@
 			We learned about basic technology and nothing hard. 
 			Most of us were new to technology so we started with the basics and started slow. 
 		</p>
-		
+		<img src="images/museum.jpg" alt="people looking at art" width="500">
 		<h2>7th Grade Learning</h2>
 		<p> In 7th grade we started to learn more about technology and it wasn't very easy stopics.
 			We learned how to use Photoshop, Illustrator, SketchUp, and FloorPlanner.
 		</p>
-		
+		 <img src="images/museum.jpg" alt="people looking at art" width="500">
 		
 		<h2>8th Grade Learning</h2>
 		<p> In 8th grade we learned how to code, filming, use storyboard, Imovie, and GarageBand.
 		</p>
-		
+		<img src="images/museum.jpg" alt="people looking at art" width="500">
 		
 		
 		
