--- a/future.html
+++ b/future.html
@@ -19,13 +19,13 @@
 		</header>
 		
 		<h2>High School</h2>
-		
+		<img src="images/museum.jpg" alt="people looking at art" width="500">
 		<h2>College</h2>
-		
+		<img src="images/museum.jpg" alt="people looking at art" width="500">
 		<h2>Career Interest</h2>
-		
+		<img src="images/museum.jpg" alt="people looking at art" width="500">
 		<h2>Goals</h2>
-		
+		<img src="images/museum.jpg" alt="people looking at art" width="500">
 		
 		
 		
