--- a/atm.html
+++ b/atm.html
@@ -27,12 +27,12 @@
 		<p> In 7th grade we started to learn more about technology and it wasn't very easy stopics.
 			We learned how to use Photoshop, Illustrator, SketchUp, and FloorPlanner.
 		</p>
-		 <img src="images/museum.jpg" alt="people looking at art" width="500">
+		 <img src="https://lh3.google.com/u/0/d/0B2QDUvVhUdZiTzRtSmE5eUxYVWs=w731-h555-iv1" alt="Photoshop" width="300">
 		
 		<h2>8th Grade Learning</h2>
-		<p> In 8th grade we learned how to code, filming, use storyboard, Imovie, and GarageBand.
+		<p> In 8th grade we learned how to code, filming, use storyboard, IMovie, and GarageBand.
 		</p>
-		<img src="images/museum.jpg" alt="people looking at art" width="500">
+		<img src="https://lh3.google.com/u/0/d/0B2QDUvVhUdZiUm5uTVEwT3hFbXc=w731-h555-iv1" alt="Coding" width="300">
 		
 		
 		
