--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	</head>
 	<body>
 		<header>
-			<img src="Image Source">
+			<img src="https://lh3.google.com/u/0/d/0B2QDUvVhUdZiYUp6MXZqdWpzMDQ=w731-h555-iv1" alt="Marikris" width="150">
 			<h1 id="marikris">About Marikris</h1>
 			<img src="Image Source">
 			<h2 id="contents">Table of Contents</h2>
