--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
 	<body>
 		<header>
 			
-			<h1 id="marikris">About Marikris</h1>
-			<img src="https://lh3.google.com/u/0/d/0B2QDUvVhUdZiYUp6MXZqdWpzMDQ=w731-h555-iv1" alt="Marikris" width="150">
+			<h1 id="marikris">About Marikris</h1><img src="https://lh3.google.com/u/0/d/0B2QDUvVhUdZiYUp6MXZqdWpzMDQ=w731-h555-iv1" alt="Marikris" width="150">
 			<h2 id="contents">Table of Contents</h2>
 				<ul id="links">
 					<li><a href="index.html">Home</a></li>
