--- a/atm.html
+++ b/atm.html
@@ -6,7 +6,7 @@
 	</head>
 	<body>
 		<header>
-			<img src="Image Source">
+			<img src="https://lh3.google.com/u/0/d/0B2QDUvVhUdZiYUp6MXZqdWpzMDQ=w731-h555-iv1" alt="Marikris" width="150">
 			<h1>About Marikris</h1>
 			<h2>Table of Contents</h2>
 				<ul>
@@ -30,7 +30,9 @@
 		 <img src="https://lh3.google.com/u/0/d/0B2QDUvVhUdZiTzRtSmE5eUxYVWs=w731-h555-iv1" alt="Photoshop" width="300">
 		
 		<h2>8th Grade Learning</h2>
-		<p> In 8th grade we learned how to code, filming, use storyboard, IMovie, and GarageBand.
+		<p> In 8th grade we learned how to code, filming, use storyboard, IMovie, and GarageBand. 
+		Out of all the topics we have learned so far in 8th grade, I think that coding was the hardest because if you mess up, it wa frustrating and we had to go back to figure out what we did wrong.
+		
 		</p>
 		<img src="https://lh3.google.com/u/0/d/0B2QDUvVhUdZiUm5uTVEwT3hFbXc=w731-h555-iv1" alt="Coding" width="300">
 		
