--- a/index.html
+++ b/index.html
@@ -18,20 +18,20 @@
 		</header>
 		<h2 id="skills">My Skills</h2>
 			<p id="skills">I don't have many skills but some I have are, ATM topics, hula hooping and volleyball. I think that I am pretty good at hula hooping because I can do tricks with a hula hoop. </p>
-			<img src="images/museum.jpg" alt="people looking at art" width="500">
+			<img src="https://lh3.google.com/u/0/d/0B2QDUvVhUdZiaFMtb3FvbGUyeXM=w779-h903-iv1" alt="hula hoop" width="200">
 		<h2 id="hobbies">My Hobbies</h2>
 			<p id="hobbies">I have a few hobbies like watching Youtube, watching Netflix, eating, sleeping and drawing. 
 				My favorite hobbie is watchng Youtube while snacking. 
 				During my free time I usually watch Youtube or Netflix. 
 				I think that these are my favorite hobbies because I enjoy watching shows, movies, and videos.
 			</p>
-			<img src="images/waterpark.jpg" alt="slides at a waterpark" width="500">
+			<img src="https://lh3.google.com/u/0/d/0B2QDUvVhUdZiTlNTYWdTV1F1Yk0=w779-h903-iv1" alt="mandala flower" width="200">
 		<h2 id="interest">My Interests</h2>
 			<p id="interest">Have many interests like tv shows, Netflix, Youtube, food.
 				Those are my main interest but I have many more that I am not that interested in as I am to my main ones.
 				I think that I 
 		</p>
-			<img src="images/giraffe.jpg" alt="back of the head of a giraffe" width="500">
+			<img src="https://lh3.google.com/u/0/d/0B2QDUvVhUdZiSVBnSmhIS0FCOUE=w779-h903-iv1" alt="youtube" width="200">
 		<h2 id="family">Family</h2>
 		<p id="family">
 		Cheril<br>
