--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 				</ul>
 		</header>
 		<h2 id="skills">My Skills</h2>
-			<p id="skills">I don't have many skills but some I have are, ATM topics, hula hooping and volleyball. I think that I am pretty good at hula hooping because I can do tricks with a hula hoop. </p>
+			<p id="skills">Hula Hooping    ATM    Volleyball</p>
 			<img src="https://lh3.google.com/u/0/d/0B2QDUvVhUdZiaFMtb3FvbGUyeXM=w779-h903-iv1" alt="hula hoop" width="200">
 		<h2 id="hobbies">My Hobbies</h2>
 			<p id="hobbies">I have a few hobbies like watching Youtube, watching Netflix, eating, sleeping and drawing. 
