--- a/atm.html
+++ b/atm.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 	<head>
-		<title>About Marikris</title>
+		<title>Marikris</title>
 		<link rel="stylesheet" type="text/css" href="mystyle.css">
 	</head>
 	<body>
