--- a/entertainment.html
+++ b/entertainment.html
@@ -1,13 +1,13 @@
 <!doctype html>
 <html>
 	<head>
-		<title>Marikris</title>
+		<title>About Marikris</title>
 		<link rel="stylesheet" type="text/css" href="mystyle.css">
 	</head>
 	<body>
 		<header>
 			<img src="https://lh3.google.com/u/0/d/0B2QDUvVhUdZiYUp6MXZqdWpzMDQ=w1905-h963-iv1" alt="Marikris" width="150">
-			<h1>About Marikris</h1>
+			<h1>Marikris</h1>
 			<h2>Table of Contents</h2>
 				<ul>
 					<li><a href="index.html">Home</a></li>
