--- a/index.html
+++ b/index.html
@@ -19,8 +19,14 @@
 		</header>
 		<h2 id="skills">My Skills</h2>
 			
-		<ul id="skill">
-				Hula Hooping          Coding        Photoshop and Illustrator        IMovie and GarageBand        Filming        Photography        Volleyball       </ul> 
+		<p id=skill>
+			Hula Hooping<br>
+			Coding<br>
+			Photoshop and Illustrator<br>
+			IMovie and GarageBand<br>
+			Filming<br>        Photography<br>
+			Volleyball<br>
+		</p> 
 		
 		
 			<img src="https://lh3.google.com/u/0/d/0B2QDUvVhUdZiaFMtb3FvbGUyeXM=w779-h903-iv1" alt="hula hoop" width="200">
