--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
 		<h2 id="skills">My Skills</h2>
 			
 		<p id=skill>
-			Hula Hooping<br>
-			Coding<br>
+			Hula Hooping<PRE>
+			Coding<PRE>
 			Photoshop and Illustrator<br>
 			IMovie and GarageBand<br>
 			Filming<br>        Photography<br>
