--- a/index.html
+++ b/index.html
@@ -20,12 +20,11 @@
 		<h2 id="skills">My Skills</h2>
 			
 		<p id=skill>
-			Hula Hooping<PRE>
-			Coding<PRE>
-			Photoshop and Illustrator<br>
-			IMovie and GarageBand<br>
-			Filming<br>        Photography<br>
-			Volleyball<br>
+			Hula Hooping<PRE>Coding<PRE>
+			Photoshop and Illustrator<PRE>
+			IMovie and GarageBand<PRE>
+			Filming<PRE>        Photography<PRE>
+			Volleyball<PRE>
 		</p> 
 		
 		
