--- a/index.html
+++ b/index.html
@@ -20,12 +20,14 @@
 		<h2 id="skills">My Skills</h2>
 			
 		<p id=skill>
-			Hula Hooping<PRE>Coding<PRE>
-			Photoshop and Illustrator<PRE>
-			IMovie and GarageBand<PRE>
-			Filming<PRE>        Photography<PRE>
-			Volleyball<PRE>
-		</p> 
+			Hula Hooping<tab>
+			Coding<tab>
+			Photoshop and Illustrator<tab>
+			IMovie and GarageBand<tab>
+			Filming<tab>        Photography<tab>
+			Volleyball<tab>
+		
+			</p> 
 		
 		
 			<img src="https://lh3.google.com/u/0/d/0B2QDUvVhUdZiaFMtb3FvbGUyeXM=w779-h903-iv1" alt="hula hoop" width="200">
