--- a/index.html
+++ b/index.html
@@ -19,15 +19,16 @@
 		</header>
 		<h2 id="skills">My Skills</h2>
 			
-		<p id=skill>
-			Hula Hooping<tab>
-			Coding<tab>
-			Photoshop and Illustrator<tab>
-			IMovie and GarageBand<tab>
-			Filming<tab>        Photography<tab>
-			Volleyball<tab>
+		<pre>
+			Hula Hooping
+			Coding
+			Photoshop and Illustrator
+			IMovie and GarageBand
+			Filming       
+			Photography
+			Volleyball
 		
-			</p> 
+		</pre> 
 		
 		
 			<img src="https://lh3.google.com/u/0/d/0B2QDUvVhUdZiaFMtb3FvbGUyeXM=w779-h903-iv1" alt="hula hoop" width="200">
