--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 		</header>
 		<h2 id="skills">My Skills</h2>
 			
-		<pre>
-			Hula Hooping
+		<p>
+			Hula Hooping &nbsp;
 			Coding
 			Photoshop and Illustrator
 			IMovie and GarageBand
@@ -28,7 +28,7 @@
 			Photography
 			Volleyball
 		
-		</pre> 
+		</p> 
 		
 		
 			<img src="https://lh3.google.com/u/0/d/0B2QDUvVhUdZiaFMtb3FvbGUyeXM=w779-h903-iv1" alt="hula hoop" width="200">
