--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
 			
 		<p>
 			Hula Hooping &nbsp;
-			Coding
-			Photoshop and Illustrator
-			IMovie and GarageBand
-			Filming       
-			Photography
-			Volleyball
+			Coding &nbsp;
+			Photoshop and Illustrator &nbsp;
+			IMovie and GarageBand &nbsp;
+			Filming &nbsp;      
+			Photography &nbsp;
+			Volleyball &nbsp;
 		
 		</p> 
 		
