--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 		<p>
 			Hula Hooping    &nbsp;
 			Coding    &nbsp;
-			Photoshop and Illustrator    &nbsp;
+			Photoshop and Illustrator    &nbsp; <br>
 			IMovie and GarageBand    &nbsp;
 			Filming    &nbsp;      
 			Photography    &nbsp;
