--- a/atm.html
+++ b/atm.html
@@ -18,20 +18,35 @@
 		</header>
 		
 		<h2>6th Grade Learning</h2>
-		<p> We learned how to type, use Microsoft Word, Exel, Slideshow, research, and Javascript.
-			We learned about basic technology and nothing hard. 
-			Most of us were new to technology so we started with the basics and started slow. 
+		<p> 
+			Typing    &nbsp;
+			Microsoft Word    &nbsp;
+			Microsoft Excel    &nbsp; <br>
+			Microsoft Slideshow    &nbsp;
+			Research    &nbsp;
+			Javascipt    &nbsp;
 		</p>
 		<img src="https://lh3.google.com/u/0/d/0B2QDUvVhUdZiQllLbTcycEV2Vlk=w736-h555-iv1" alt="a keyboard" width="200">
 		<h2>7th Grade Learning</h2>
-		<p> In 7th grade we started to learn more about technology and it wasn't very easy stopics.
-			We learned how to use Photoshop, Illustrator, SketchUp, and FloorPlanner.
+		<p> 
+			PhotoShop    &nbsp;
+			Illustrator    &nbsp;
+			SketchUp     &nbsp; <br>    
+			FloorPlanner    &nbsp;
+			Google Drawing      &nbsp;
+			Infographics    &nbsp;
 		</p>
 		 <img src="https://lh3.google.com/u/0/d/0B2QDUvVhUdZiTzRtSmE5eUxYVWs=w731-h555-iv1" alt="Photoshop" width="175">
 		
 		<h2>8th Grade Learning</h2>
-		<p> In 8th grade we learned how to code, filming, use storyboard, IMovie, and GarageBand. 
-		Out of all the topics we have learned so far in 8th grade, I think that coding was the hardest because if you mess up, it wa frustrating and we had to go back to figure out what we did wrong.
+		<p> 
+			Coding    &nbsp;
+			Filming    &nbsp;
+			StoryBoard    &nbsp;
+			IMovie    &nbsp;
+			GarageBand    &nbsp;
+			ClassCraft    &nbsp;
+			
 		
 		</p>
 		<img src="https://lh3.google.com/u/0/d/0B2QDUvVhUdZiUm5uTVEwT3hFbXc=w731-h555-iv1" alt="Coding" width="200">
