--- a/entertainment.html
+++ b/entertainment.html
@@ -17,8 +17,32 @@
 				</ul>
 		</header>
 		
+		<h2>Youtube</h2>
+		There are many different types of videos to watch on Youtube. <br>
+		Music    &nbsp;
+		Sports    &nbsp;
+		Gaming    &nbsp; <br>
+		Movies    &nbsp;
+		Tv Shows    &nbsp;
+		News    &nbsp;
+		Live    &nbsp;
 		
 		
+		
+		
+		
+		
+		<h2>Netflix</h2>
+		There are also many different types of videos to watch on Netflix.<br>
+Action and Adventure    &nbsp;
+Comedies    &nbsp;
+Dramas    &nbsp;
+Sci-Fi and Fantasy    &nbsp;
+Documentaries    &nbsp; <br>
+Horror    &nbsp;
+Music    &nbsp;
+Special Interest    &nbsp;
+Thrillers    &nbsp;
 		
 		
 		
