--- a/future.html
+++ b/future.html
@@ -19,14 +19,31 @@
 		</header>
 		
 		<h2>High School</h2>
-		<img src="images/museum.jpg" alt="people looking at art" width="500">
+		<img src="" alt="" width="200">
+		<p>
+			Millikan    &nbsp;
+			Lakewood    &nbsp;
+		</p>
 		<h2>College</h2>
-		<img src="images/museum.jpg" alt="people looking at art" width="500">
+		<img src="" alt="" width="200">
+		<p>
+			UCLA    &nbsp;
+			USC    &nbsp;
+			LB State    &nbsp;
+		</p>
 		<h2>Career Interest</h2>
-		<img src="images/museum.jpg" alt="people looking at art" width="500">
+		<img src="" alt="" width="200">
+		<p>
+			Doctor    &nbsp;
+			Nurse    &nbsp;
+		</p>
 		<h2>Goals</h2>
-		<img src="images/museum.jpg" alt="people looking at art" width="500">
-		
+		<img src="" alt="" width="200">
+		<p>
+			Follow my dreams    &nbsp;
+			Try my best    &nbsp;
+			Never give up    &nbsp;
+		</p>
 		
 		
 		
