--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 			<h1 id="marikris">Marikris</h1>
 			<h2 id="contents">Table of Contents</h2>
 				<ul id="links">
-					<li id="web"><a href="index.html">Home</a></li>
-					<li id="web"><a href="future.html">My Future</a></li>
-					<li id="web"><a href="atm.html">ATM</a></li>
-					<li id="web"><a href="entertainment.html">Entertainment</a></li>
+					<li><a href="index.html">Home</a></li>
+					<li><a href="future.html">My Future</a></li>
+					<li><a href="atm.html">ATM</a></li>
+					<li><a href="entertainment.html">Entertainment</a></li>
 				</ul>
 		</header>
 		<h2 id="skills">My Skills</h2>
