--- a/index.html
+++ b/index.html
@@ -39,13 +39,13 @@
 			</p>
 			<img src="https://lh3.google.com/u/0/d/0B2QDUvVhUdZiTlNTYWdTV1F1Yk0=w779-h903-iv1" alt="mandala flower" width="200">
 		<h2 id="interest">My Interests</h2>
-			<p id="interest">Have many interests like tv shows, Netflix, Youtube, food.
+			<p id="interests">Have many interests like tv shows, Netflix, Youtube, food.
 				Those are my main interest but I have many more that I am not that interested in as I am to my main ones.
 				I think that I 
 		</p>
 			<img src="https://lh3.google.com/u/0/d/0B2QDUvVhUdZiSVBnSmhIS0FCOUE=w779-h903-iv1" alt="youtube" width="200">
 		<h2 id="family">Family</h2>
-		<p id="family">
+		<p id="families">
 		<img src="https://lh3.google.com/u/0/d/0B2QDUvVhUdZiVk9tYko4X21UZkE=w981-h903-iv1" alt="youtube" width="100"><br>
 		Cheril<br>
 		Rowen<br>
