--- a/entertainment.html
+++ b/entertainment.html
@@ -18,6 +18,7 @@
 		</header>
 		
 		<h2>Youtube</h2>
+		<a href="https://www.youtube.com/">Home</a><br>
 		There are many different types of videos to watch on Youtube. <br>
 		Music    &nbsp;
 		Sports    &nbsp;
@@ -33,16 +34,17 @@
 		
 		
 		<h2>Netflix</h2>
+		<a href="https://www.netflix.com/">Home</a><br>
 		There are also many different types of videos to watch on Netflix.<br>
-Action and Adventure    &nbsp;
-Comedies    &nbsp;
-Dramas    &nbsp;
-Sci-Fi and Fantasy    &nbsp;
-Documentaries    &nbsp; <br>
-Horror    &nbsp;
-Music    &nbsp;
-Special Interest    &nbsp;
-Thrillers    &nbsp;
+		Action and Adventure    &nbsp;
+		Comedies    &nbsp;
+		Dramas    &nbsp;
+		Sci-Fi and Fantasy    &nbsp;
+		Documentaries    &nbsp; <br>
+		Horror    &nbsp;
+		Music    &nbsp;
+		Special Interest    &nbsp;
+		Thrillers    &nbsp;
 		
 		
 		
