--- a/entertainment.html
+++ b/entertainment.html
@@ -18,7 +18,7 @@
 		</header>
 		
 		<h2>Youtube</h2>
-		<a href="https://www.youtube.com/">Home</a><br>
+		<a href="https://www.youtube.com/">Youtube</a><br>
 		There are many different types of videos to watch on Youtube. <br>
 		Music    &nbsp;
 		Sports    &nbsp;
@@ -34,7 +34,7 @@
 		
 		
 		<h2>Netflix</h2>
-		<a href="https://www.netflix.com/">Home</a><br>
+		<a href="https://www.netflix.com/">Netflix</a><br>
 		There are also many different types of videos to watch on Netflix.<br>
 		Action and Adventure    &nbsp;
 		Comedies    &nbsp;
