--- a/future.html
+++ b/future.html
@@ -19,31 +19,39 @@
 		</header>
 		
 		<h2>High School</h2>
-		<img src="" alt="" width="200">
+		
 		<p>
 			Millikan    &nbsp;
 			Lakewood    &nbsp;
+			Poly    &nbsp;
 		</p>
+		<img src="https://lh3.google.com/u/1/d/0B2QDUvVhUdZibWxLUTZPZkJ2czg=w1349-h549-iv1" alt="Math" width="200">
 		<h2>College</h2>
-		<img src="" alt="" width="200">
+		
 		<p>
 			UCLA    &nbsp;
 			USC    &nbsp;
 			LB State    &nbsp;
 		</p>
+		<img src="https://lh3.google.com/u/1/d/0B2QDUvVhUdZiZ2JlWEVwLWFPT2s=w1346-h549-iv1" alt="Books" width="200">
 		<h2>Career Interest</h2>
-		<img src="" alt="" width="200">
+		
 		<p>
+			Photographer    &nbsp;
 			Doctor    &nbsp;
 			Nurse    &nbsp;
+			Lawyer    &nbsp;
+			Psychologist    &nbsp;
 		</p>
+		<img src="https://lh3.google.com/u/1/d/0B2QDUvVhUdZiTEU4dy1RSTNyc1E=w1346-h549-iv1" alt="Apple" width="200">
 		<h2>Goals</h2>
-		<img src="" alt="" width="200">
+		
 		<p>
 			Follow my dreams    &nbsp;
 			Try my best    &nbsp;
 			Never give up    &nbsp;
 		</p>
+		<img src="https://lh3.google.com/u/1/d/0B2QDUvVhUdZiU19raVBnVzNRRUE=w1346-h549-iv1" alt="Notes" width="200">
 		
 		
 		
