--- a/atm.html
+++ b/atm.html
@@ -42,7 +42,7 @@
 		<p> 
 			Coding    &nbsp;
 			Filming    &nbsp;
-			StoryBoard    &nbsp;
+			StoryBoard    &nbsp;<br>
 			IMovie    &nbsp;
 			GarageBand    &nbsp;
 			ClassCraft    &nbsp;
@@ -51,8 +51,9 @@
 		</p>
 		<img src="https://lh3.google.com/u/0/d/0B2QDUvVhUdZiUm5uTVEwT3hFbXc=w731-h555-iv1" alt="Coding" width="200">
 		
-		
-		
-		
-		
+		<h2>Relflection</h2>
+		<p>
+		I think that the things that we had learned so far were at at first but after awhile you get the hang of it.
+			I think after awhile, you learn more about the topic
+		</p>
 		</body>
