--- a/index.html
+++ b/index.html
@@ -32,16 +32,24 @@
 		
 			<img src="https://lh3.google.com/u/0/d/0B2QDUvVhUdZiaFMtb3FvbGUyeXM=w779-h903-iv1" alt="hula hoop" width="200">
 		<h2 id="hobby">My Hobbies</h2>
-			<p id="hobbies">I have a few hobbies like watching Youtube, watching Netflix, eating, sleeping and drawing. 
-				My favorite hobbie is watchng Youtube while snacking. 
-				During my free time I usually watch Youtube or Netflix. 
-				I think that these are my favorite hobbies because I enjoy watching shows, movies, and videos.
+			<p id="hobbies">
+				Youtube
+				Netflix
+				Volleyball
+				Taking Pictures
+				Sleeping
+				Eating
+				Hula Hooping
+				
 			</p>
 			<img src="https://lh3.google.com/u/0/d/0B2QDUvVhUdZiTlNTYWdTV1F1Yk0=w779-h903-iv1" alt="mandala flower" width="200">
 		<h2 id="interest">My Interests</h2>
-			<p id="interests">Have many interests like tv shows, Netflix, Youtube, food.
-				Those are my main interest but I have many more that I am not that interested in as I am to my main ones.
-				I think that I 
+			<p id="interests">
+				Photography
+				Youtube
+				Netflix
+				Gaming
+				
 		</p>
 			<img src="https://lh3.google.com/u/0/d/0B2QDUvVhUdZiSVBnSmhIS0FCOUE=w779-h903-iv1" alt="youtube" width="200">
 		<h2 id="family">Family</h2>
