--- a/atm.html
+++ b/atm.html
@@ -53,7 +53,14 @@
 		
 		<h2>Relflection</h2>
 		<p>
-		I think that the things that we had learned so far were at at first but after awhile you get the hang of it.
-			I think after awhile, you learn more about the topic
+			The ATM program is a program where you learn about technology and ATM stands for applied technology magnet.
+			I think that the things that we had learned so far were at at first hard but after awhile you get the hang of it.
+			After awhile, you learn more about the topic then it get's easier. Most of the projects we do are fun but are somtimes stressful.
+			When you make a mistake you have to go back and figure out what you did wrong.
+			At first I didn't think that I wasn't going to learn much in ATM but I ended up learning a lot.
+			ATM helped me understand technologly way much more than I used to know about it before.
+			I hope to learn much more in the rest of my time in ATM.
+			
+			
 		</p>
 		</body>
