--- a/entertainment.html
+++ b/entertainment.html
@@ -6,7 +6,8 @@
 	</head>
 	<body>
 		<header>
-			<img src="https://lh3.google.com/u/1/d/0B2QDUvVhUdZibGl5a3JoZUFINjQ=w620-h536-iv1" alt="Marikris" width="150">
+			
+			<img src="https://lh3.google.com/u/1/d/0B2QDUvVhUdZiQl9Gb3JTMlFJN2s=w1346-h549-iv1" alt="Technology" width="150">
 			<h1>Marikris</h1>
 			<h2>Table of Contents</h2>
 				<ul>
@@ -28,7 +29,7 @@
 		News    &nbsp;
 		Live    &nbsp;
 		
-		
+		<img src="https://lh3.google.com/u/1/d/0B2QDUvVhUdZibGl5a3JoZUFINjQ=w620-h536-iv1" alt="Youtube" width="100">
 		
 		
 		
@@ -46,6 +47,6 @@
 		Special Interest    &nbsp;
 		Thrillers    &nbsp;
 		
-		
+		<img src="https://lh3.google.com/u/1/d/0B2QDUvVhUdZid3dZRzBYZGZoV0k=w1346-h549-iv1" alt="Popcorn" width="200">
 		
 		</body>
