--- a/entertainment.html
+++ b/entertainment.html
@@ -19,7 +19,7 @@
 		</header>
 		
 		<h2>Youtube</h2>
-		<a href="https://www.youtube.com/" target="_blank">Youtube</a><br>
+		<a href="https://www.youtube.com/" target="_blank" id="youtube">Youtube</a><br>
 		There are many different types of videos to watch on Youtube. <br>
 		Music    &nbsp;
 		Sports    &nbsp;
@@ -35,7 +35,7 @@
 		
 		
 		<h2>Netflix</h2>
-		<a href="https://www.netflix.com/" target="_blank">Netflix</a><br>
+		<a href="https://www.netflix.com/" target="_blank" id="netflix">Netflix</a><br>
 		There are also many different types of videos to watch on Netflix.<br>
 		Action and Adventure    &nbsp;
 		Comedies    &nbsp;
