--- a/atm.html
+++ b/atm.html
@@ -53,14 +53,14 @@
 		
 		<h2>Relflection</h2>
 		<p>
-			The ATM program is a program where you learn about technology and ATM stands for applied technology magnet.
-			I think that the things that we had learned so far were at at first hard but after awhile you get the hang of it.
-			After awhile, you learn more about the topic then it get's easier.
+			The ATM program is a program where you learn about technology and ATM stands for applied technology magnet.<br>
+			I think that the things that we had learned so far were at at first hard but after awhile you get the hang of it.<br>
+			After awhile, you learn more about the topic then it get's easier.<br>
 			Most of the projects we do are fun but are somtimes stressful.<br>
-			When you make a mistake you have to go back and figure out what you did wrong.
-			At first I didn't think that I wasn't going to learn much in ATM but I ended up learning a lot.
-			ATM helped me understand technologly way much more than I used to know about it before.
-			I hope to learn much more in the rest of my time in ATM.
+			When you make a mistake you have to go back and figure out what you did wrong.<br>
+			At first I didn't think that I wasn't going to learn much in ATM but I ended up learning a lot.<br>
+			ATM helped me understand technologly way much more than I used to know about it before.<br>
+			I hope to learn much more in the rest of my time in ATM.<br>
 			
 			
 		</p>
