--- a/entertainment.html
+++ b/entertainment.html
@@ -28,7 +28,7 @@
 		Movies    &nbsp;
 		Tv Shows    &nbsp;
 		News    &nbsp;
-		Live    &nbsp;
+		Live    &nbsp;<br>
 		</p>
 		<img src="https://lh3.google.com/u/1/d/0B2QDUvVhUdZibGl5a3JoZUFINjQ=w620-h536-iv1" alt="Youtube" width="100">
 		
@@ -47,7 +47,7 @@
 		Horror    &nbsp;
 		Music    &nbsp;
 		Special Interest    &nbsp;
-		Thrillers    &nbsp;
+		Thrillers    &nbsp;<br>
 		</p>
 		<img src="https://lh3.google.com/u/1/d/0B2QDUvVhUdZid3dZRzBYZGZoV0k=w1346-h549-iv1" alt="Popcorn" width="200">
 		
