--- a/index.html
+++ b/index.html
@@ -33,22 +33,22 @@
 			<img src="https://lh3.google.com/u/0/d/0B2QDUvVhUdZiaFMtb3FvbGUyeXM=w779-h903-iv1" alt="hula hoop" width="200">
 		<h2 id="hobby">My Hobbies</h2>
 			<p id="hobbies">
-				Youtube
-				Netflix
-				Volleyball
-				Taking Pictures
-				Sleeping
-				Eating
-				Hula Hooping
+				Youtube    &nbsp;
+				Netflix    &nbsp;
+				Volleyball    &nbsp;<br>
+				Taking Pictures    &nbsp;
+				Sleeping    &nbsp;
+				Eating    &nbsp;
+				Hula Hooping    &nbsp;
 				
 			</p>
 			<img src="https://lh3.google.com/u/0/d/0B2QDUvVhUdZiTlNTYWdTV1F1Yk0=w779-h903-iv1" alt="mandala flower" width="200">
 		<h2 id="interest">My Interests</h2>
 			<p id="interests">
-				Photography
-				Youtube
-				Netflix
-				Gaming
+				Photography    &nbsp;
+				Youtube    &nbsp;
+				Netflix    &nbsp;
+				Gaming    &nbsp;
 				
 		</p>
 			<img src="https://lh3.google.com/u/0/d/0B2QDUvVhUdZiSVBnSmhIS0FCOUE=w779-h903-iv1" alt="youtube" width="200">
